LongHorn/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: longhorn-system
  name: longhorn
spec:
  ingressClassName: nginx
  rules:
  - host: longhorn.161.35.26.8.nip.io
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
